Switch to virtual thread executor in Main class. Extensive error handling on DatabaseManager.java.