@@ -17,7 +17,7 @@ public final class Main extends JavaPlugin {
 
 
     public static boolean SQLMode = false;
-    private static final ExecutorService executorService = Executors.newFixedThreadPool(10);
+    private static final ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor();
 
     @Override
     public void onEnable() {
